objects/WorkOrder__x.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionCodeOffline_c__c</fullName>
        <externalDeveloperName>ActionCodeOffline__c</externalDeveloperName>
        <label>Action Code (Offline)</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C052</fullName>
                    <label>SERVICE RESTART - C052</label>
                </value>
                <value>
                    <fullName>C054</fullName>
                    <label>SEND COTATION FOR INTERVENTION - C054</label>
                </value>
                <value>
                    <fullName>C002</fullName>
                    <label>INSTALL/REMOVAL - C002</label>
                </value>
                <value>
                    <fullName>C004</fullName>
                    <label>CLEAN ELECTRONIC - C004</label>
                </value>
                <value>
                    <fullName>C006</fullName>
                    <label>CLEAN PNEUMATIC - C006</label>
                </value>
                <value>
                    <fullName>C008</fullName>
                    <label>REPLACE PART - C008</label>
                </value>
                <value>
                    <fullName>C010</fullName>
                    <label>CALIBRATE/ALIGN ELECTRONIC - C010</label>
                </value>
                <value>
                    <fullName>C012</fullName>
                    <label>CALIBRATE/ALIGN PNEUMATIC - C012</label>
                </value>
                <value>
                    <fullName>C014</fullName>
                    <label>REPAIR ELECTRONIC - C014</label>
                </value>
                <value>
                    <fullName>C016</fullName>
                    <label>SHIPPED PARTS - C016</label>
                </value>
                <value>
                    <fullName>C018</fullName>
                    <label>SHIPPED SOFTWARE - C018</label>
                </value>
                <value>
                    <fullName>C020</fullName>
                    <label>PHONE FIX - C020</label>
                </value>
                <value>
                    <fullName>C022</fullName>
                    <label>UNABLE TO CODE - C022</label>
                </value>
                <value>
                    <fullName>C024</fullName>
                    <label>ENGINEERING MOD - C024</label>
                </value>
                <value>
                    <fullName>C026</fullName>
                    <label>CYCLED A.C. POWER - C026</label>
                </value>
                <value>
                    <fullName>C028</fullName>
                    <label>ANSWERED QUESTIONS - C028</label>
                </value>
                <value>
                    <fullName>C030</fullName>
                    <label>NEED FSE TO REPAIR - C030</label>
                </value>
                <value>
                    <fullName>C032</fullName>
                    <label>REPLACED MODULE - C032</label>
                </value>
                <value>
                    <fullName>C053</fullName>
                    <label>INSTALL/UPDATE/RE INSTALL - C053</label>
                </value>
                <value>
                    <fullName>C034</fullName>
                    <label>AUTO VIDAS AUTOCAL RETROFIT - C034</label>
                </value>
                <value>
                    <fullName>C036</fullName>
                    <label>DETR VITEK READER DETECTOR - C036</label>
                </value>
                <value>
                    <fullName>C038</fullName>
                    <label>FLEX HIGH FLEX CABLE - C038</label>
                </value>
                <value>
                    <fullName>C040</fullName>
                    <label>FW81 READER FIRMWARE - C040</label>
                </value>
                <value>
                    <fullName>C042</fullName>
                    <label>PORT 8 PORT PCB VERSION - C042</label>
                </value>
                <value>
                    <fullName>C044</fullName>
                    <label>SCAN VIDAS SCANHEAD MOD - C044</label>
                </value>
                <value>
                    <fullName>C046</fullName>
                    <label>REMOTE DIAGNOSTIC FIX - C046</label>
                </value>
                <value>
                    <fullName>C048</fullName>
                    <label>FIX BY CLEANING - C048</label>
                </value>
                <value>
                    <fullName>C050</fullName>
                    <label>UPDATE HARDWARE - C050</label>
                </value>
                <value>
                    <fullName>C051</fullName>
                    <label>REMOTE ACCESS VIA VILINK - C051</label>
                </value>
                <value>
                    <fullName>C001</fullName>
                    <label>PM - C001</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActionCode_c__c</fullName>
        <externalDeveloperName>ActionCode__c</externalDeveloperName>
        <label>Action Code</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <externalDeveloperName>AssetId</externalDeveloperName>
        <label>Asset ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetInternalUse_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>AssetInternalUse__c</externalDeveloperName>
        <label>Asset - Internal Use</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetSNaccessible_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>AssetSNaccessible__c</externalDeveloperName>
        <label>Asset serial number accessible ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Child_ID_c__c</fullName>
        <externalDeveloperName>Asset_Child_ID__c</externalDeveloperName>
        <label>Asset Child ID</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assetcheckcomment_c__c</fullName>
        <externalDeveloperName>Assetcheckcomment__c</externalDeveloperName>
        <label>Asset check comment</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillTo_c__c</fullName>
        <externalDeveloperName>BillTo__c</externalDeveloperName>
        <label>Bill To</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillableAmount_c__c</fullName>
        <externalDeveloperName>BillableAmount__c</externalDeveloperName>
        <label>Billable Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <externalDeveloperName>BusinessHoursId</externalDeveloperName>
        <label>Business Hours ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVM_Category_c__c</fullName>
        <externalDeveloperName>CVM_Category__c</externalDeveloperName>
        <label>CVM &amp; Category</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CVM_c__c</fullName>
        <externalDeveloperName>CVM__c</externalDeveloperName>
        <label>CVM</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancellationReason_c__c</fullName>
        <externalDeveloperName>CancellationReason__c</externalDeveloperName>
        <label>Cancellation reason</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled by customer</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Created by mistake</fullName>
                </value>
                <value>
                    <fullName>Resolved without work order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseErrorCode_c__c</fullName>
        <externalDeveloperName>CaseErrorCode__c</externalDeveloperName>
        <label>Initial Case Error Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseFieldActionImpact_c__c</fullName>
        <externalDeveloperName>CaseFieldActionImpact__c</externalDeveloperName>
        <label>Case Field Action Impact</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <externalDeveloperName>CaseId</externalDeveloperName>
        <label>Case</label>
        <length>18</length>
        <referenceTo>Case__x</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>CaseOriginSAP_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CaseOriginSAP__c</externalDeveloperName>
        <inlineHelpText>Case was initially created in SAP?</inlineHelpText>
        <label>Case Origin is SAP</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalog_Profile_c__c</fullName>
        <externalDeveloperName>Catalog_Profile__c</externalDeveloperName>
        <label>Catalog Profile</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$$-OSS-SM</fullName>
                    <label>$$-OSS-SM - R/3 Notifications</label>
                </value>
                <value>
                    <fullName>000000001</fullName>
                    <label>000000001 - General Catalog Profile</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - NO DETERMIDED</label>
                </value>
                <value>
                    <fullName>A91</fullName>
                    <label>A91 - CONNECT-UP</label>
                </value>
                <value>
                    <fullName>A92</fullName>
                    <label>A92 - EPISEQ SOFTWARE</label>
                </value>
                <value>
                    <fullName>A94</fullName>
                    <label>A94 - EVISIGHT COMPACT APPLICATION</label>
                </value>
                <value>
                    <fullName>A96</fullName>
                    <label>A96 - VIDAS 3 SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA8</fullName>
                    <label>AA8 - FILMARRAY SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA9</fullName>
                    <label>AA9 - EMAG SOFTWARE</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <label>B11 - IMMUNO MICRO PLAQUES</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <label>B12 - NUCLISENS (Without transfer)</label>
                </value>
                <value>
                    <fullName>B13</fullName>
                    <label>B13 - DGV</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <label>B14 - BRAZIL CHEM HEMO MICROELISA</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <label>B15 - BRAZIL IMMUNOSEROLOGY PRODUCTS</label>
                </value>
                <value>
                    <fullName>B16</fullName>
                    <label>B16 - PPM BRAZIL PRODUCTS</label>
                </value>
                <value>
                    <fullName>B18</fullName>
                    <label>B18 - BTA REAGENT CLINICAL USE</label>
                </value>
                <value>
                    <fullName>B19</fullName>
                    <label>B19 - BTA REAGENT INDUSTRIAL USE</label>
                </value>
                <value>
                    <fullName>B20</fullName>
                    <label>B20 - MB BACT REAGENT</label>
                </value>
                <value>
                    <fullName>B21</fullName>
                    <label>B21 - OBSOLETE  ELISA INDUSTRY</label>
                </value>
                <value>
                    <fullName>B22</fullName>
                    <label>B22 - VIKIA/BIONEXIA</label>
                </value>
                <value>
                    <fullName>B23</fullName>
                    <label>B23 - FOOD EXPERT</label>
                </value>
                <value>
                    <fullName>B24</fullName>
                    <label>B24 - ARGENTINA MICRO PLATES</label>
                </value>
                <value>
                    <fullName>B25</fullName>
                    <label>B25 - IMMUNO BMX MICROELISA</label>
                </value>
                <value>
                    <fullName>B26</fullName>
                    <label>B26 - IMMUNO OTHERS MICROELISA</label>
                </value>
                <value>
                    <fullName>B27</fullName>
                    <label>B27 - OBSOLETE IMMUNOASSAYS DURHAM</label>
                </value>
                <value>
                    <fullName>B28</fullName>
                    <label>B28 - OBSOLETE NUCLISENS ECL REAGENT</label>
                </value>
                <value>
                    <fullName>B29</fullName>
                    <label>B29 - NUCLISENS ISOLATION REAGENTS</label>
                </value>
                <value>
                    <fullName>B3</fullName>
                    <label>B3 - GEN PROBE</label>
                </value>
                <value>
                    <fullName>B30</fullName>
                    <label>B30 - NUCLISENS EASYQ REAGENTS</label>
                </value>
                <value>
                    <fullName>B31</fullName>
                    <label>B31 - APIWEB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categories_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Audit / Consulting / Project</fullName>
                </value>
                <value>
                    <fullName>Calibration / Metrology</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Control/Reconditioning</fullName>
                </value>
                <value>
                    <fullName>Corrective Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Classroom Training</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Hypercare (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Internal Projects</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Management/ Organization</fullName>
                </value>
                <value>
                    <fullName>Pre Installation inspection</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Remote support</fullName>
                </value>
                <value>
                    <fullName>Repair with Return</fullName>
                </value>
                <value>
                    <fullName>Return on service</fullName>
                </value>
                <value>
                    <fullName>Site Acceptance Test (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Site move / Removal</fullName>
                </value>
                <value>
                    <fullName>Technical Pre-Sales Visit</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Tool kit calibration</fullName>
                </value>
                <value>
                    <fullName>Upgrade / Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Audit / Consulting / Project</fullName>
                </value>
                <value>
                    <fullName>Calibration / Metrology</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Control/Reconditioning</fullName>
                </value>
                <value>
                    <fullName>Corrective Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Classroom Training</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Hypercare (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Internal Projects</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Management/ Organization</fullName>
                </value>
                <value>
                    <fullName>Pre Installation inspection</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Remote support</fullName>
                </value>
                <value>
                    <fullName>Repair with Return</fullName>
                </value>
                <value>
                    <fullName>Return on service</fullName>
                </value>
                <value>
                    <fullName>Site Acceptance Test (COPAN)</fullName>
                </value>
                <value>
                    <fullName>Site move / Removal</fullName>
                </value>
                <value>
                    <fullName>Technical Pre-Sales Visit</fullName>
                </value>
                <value>
                    <fullName>Time Off</fullName>
                </value>
                <value>
                    <fullName>Tool kit calibration</fullName>
                </value>
                <value>
                    <fullName>Upgrade / Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed5DaysWO_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Closed5DaysWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: For closed Work Orders, is the closed date &gt; 5 days from created date</inlineHelpText>
        <label>Closed &gt;5 Days? WO</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosedByFullName_c__c</fullName>
        <externalDeveloperName>ClosedByFullName__c</externalDeveloperName>
        <label>Closed By</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate_c__c</fullName>
        <externalDeveloperName>ClosedDate__c</externalDeveloperName>
        <label>Date/Time Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompletedOverPhone_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CompletedOverPhone__c</externalDeveloperName>
        <label>Fixed Remotely</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmAssetName_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ConfirmAssetName__c</externalDeveloperName>
        <label>Confirm Asset Names and Serial Numbers ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <externalDeveloperName>CountryCode</externalDeveloperName>
        <label>Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentStatusDateTime_c__c</fullName>
        <externalDeveloperName>CurrentStatusDateTime__c</externalDeveloperName>
        <label>Current Status DateTime</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysOverDueDateWO_c__c</fullName>
        <externalDeveloperName>DaysOverDueDateWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Use Only: The WO Due Date - Today's date. Positive Values indicate days past due date.</inlineHelpText>
        <label>Days Over Due Date:WO</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultServiceResource_c__c</fullName>
        <externalDeveloperName>DefaultServiceResource__c</externalDeveloperName>
        <label>Default Service Resource</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <externalDeveloperName>Discount</externalDeveloperName>
        <label>Discount</label>
        <precision>5</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DoNotCreateOneDriveFolder_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>DoNotCreateOneDriveFolder__c</externalDeveloperName>
        <label>Do Not Create One Drive Folder</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DurationCurrentStatusWO_c__c</fullName>
        <externalDeveloperName>DurationCurrentStatusWO__c</externalDeveloperName>
        <inlineHelpText>For Reporting Only. Calculates the days between the current status and today's date</inlineHelpText>
        <label>Duration Current Status WO</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <externalDeveloperName>DurationInMinutes</externalDeveloperName>
        <label>Duration in Minutes</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationType__c</fullName>
        <externalDeveloperName>DurationType</externalDeveloperName>
        <label>Duration Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <externalDeveloperName>Duration</externalDeveloperName>
        <label>Duration</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <externalDeveloperName>EndDate</externalDeveloperName>
        <inlineHelpText>"End Date" standard field is renamed into Due Date because users want it and because it date reflects the deadline to complete WO. When time based entitlements will be implemented, the DUE DATE of the LAST MILESTONE of the Ettlmt will be retrieved there</inlineHelpText>
        <label>Due Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <externalDeveloperName>EntitlementId</externalDeveloperName>
        <inlineHelpText>Search Entitlements of the Asset referenced in the Work Order, and only of this Asset.
When Work Order is saved, also System entitlements can be searched in this field.</inlineHelpText>
        <label>Entitlement ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementsInfo_c__c</fullName>
        <externalDeveloperName>EntitlementsInfo__c</externalDeveloperName>
        <inlineHelpText>An icon is displayed when no Entitlement is selected</inlineHelpText>
        <label>Entitlements Info</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorCodeLookup_c__c</fullName>
        <externalDeveloperName>ErrorCodeLookup__c</externalDeveloperName>
        <inlineHelpText>Here to change the error code identified. Available only in online.</inlineHelpText>
        <label>Error Code</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>